# pico-template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
